# start-stop-parsec-daemon

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  start-stop-parsec-daemon.c
debian/: changelog  control
m4/: dpkg-funcs.m4  dpkg-libs.m4
man/: Makefile.am  Makefile.in  start-stop-parsec-daemon.8
